--- a/index.html
+++ b/index.html
@@ -150,6 +150,8 @@
         Desenvolvido por <a href="https://github.com/JoaoFlaviomp" target="_blank">@JoaoFlavio</a> na trilha Start na
         Programação da OneBitCode
     </div>
+
+    <script src="index.js"></script>
 </body>
 
 </html>
